--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
             <meta charset="utf-8">
             <title> Odin's Recipes</title>
         </head>
-        <body>
-            
+
+        <body> 
+            <h1>Odin's Recipes</h1>
+            <a href="recipes/burger.html">Cheeseburger Recipe</a>
         </body>
+
     </html>
