--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,5 +7,34 @@
 
     <body>
         <h1>Cheeseburger Recipe</h1>
+        <img src="../../../Documents/odin-links-and-images/images/cheeseburger.jpg">
+        <h2>Description</h2>
+            Cheeseburgers are a classic American staple and a perfect food to serve at any occasion! Not only are they versatile but they require little prep work and can be done start to finish in as little as 30 minutes.
+            Whether it's game day, a camping trip, or hosting your annual family reunion these Cheeseburgers are sure to be a hit!
+        <h3>Ingredients</h3>
+            <ul>
+                <li>ground beef-1lb</li>
+                <li>sliced cheese</li>
+                <li>hamburger buns</li>
+                <li>your choice of vegetables (lettuce, tomato, onions, pickles, etc.)</li>
+                <li>your choice of condiments (ketchup, mustard, mayo, etc.)</li>
+                <li>salt</li>
+                <li>pepper</li>
+                <li>garlic</li>
+            </ul>            
+        <h3>Steps</h3>
+            <ol>
+                <li>Get your grill hot</li>
+                <li>Season and mix ground beef with salt, pepper, and garlic</li>
+                <li>Using your hands, create 4 round patties from the ground beef</li>
+                <li>Place ground beef patties on the grill to cook for 10-15 minutes</li>
+                <li>Flip patties and let cook for another 5-10 minutes, ensure center of patties reach 160 degrees Fahrenheit </li>
+                <li>During the last 2-3 minutes of cooking, place a piece of sliced cheese on each patty, this will allow the cheese to melt onto the patty</li>
+                <li>Remove patties from the grill and begin toasting the buns on the grill while patties rest</li>
+                <li>After buns are toasted, place patty on a bun and dress with any vegetables and condiments you like</li>
+                <li>Enjoy</li>
+            </ol>
+
+            
     </body>
 </html>
