--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
         <body> 
             <h1>Odin's Recipes</h1>
-            <a href="recipes/burger.html">Cheeseburger Recipe</a>
+            <ul>
+                <li><a href="recipes/burger.html">Cheeseburger Recipe</a></li>
+                <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+                <li><a href="recipes/enchiladas.html">Chicken Enchiladas Recipe</a>
+            </ul>
         </body>
 
     </html>
