Move images to project folder
adjust img src code accordingly
To troubleshoot images not appearing on web

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Cheeseburger Recipe</h1>
-        <img src="../../../Documents/odin-links-and-images/images/cheeseburger.jpg" alt="juicy cheeseburger loaded with toppings">
+        <img src="../images/cheeseburger.jpg" alt="juicy cheeseburger loaded with toppings">
         <h2>Description</h2>
             Cheeseburgers are a classic American staple and a perfect food to serve at any occasion! Not only are they versatile but they require little prep work and can be done start to finish in as little as 30 minutes.
             Whether it's game day, a camping trip, or hosting your annual family reunion these Cheeseburgers are sure to be a hit!
