--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Chicken Enchiladas Recipe</h1>
-    <img src="../../../Documents/odin-links-and-images/images/enchis.jpg" alt="a white oven dish full of cheesy enchiladas stacked in a row">
+    <img src="../images/enchis.jpg" alt="a white oven dish full of cheesy enchiladas stacked in a row">
     <h2> Description</h2>
     Chicken Enchiladas are a traditional mexican food that are enjoyed far and wide today. Stuffed with shredded chicken and cheese and topped with 
     an easy red enchilada sauce this homemade classic is sure to be a family favorite.
