--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
-    <img src="../../../Documents/odin-links-and-images/images/spaghetti.jpg" alt="plate of spaghetti">
+    <img src="../images/spaghetti.jpg" alt="plate of spaghetti">
     <h2>Description</h2>
     Spaghetti is a timeless italian classic that can be made very simply and quickly. 
     In this recipe we'll be using store bought noodles but if you wish to make your own, 
