Add selectors to index and write stylesheet
practice css project for odin foundations course

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
         <head>
             <meta charset="utf-8">
             <title> Odin's Recipes</title>
+            <link rel="stylesheet" href="styles.css">
         </head>
 
         <body> 
             <h1>Odin's Recipes</h1>
-            <ul>
+            <ul class="topic">
                 <li><a href="recipes/burger.html">Cheeseburger Recipe</a></li>
                 <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
                 <li><a href="recipes/enchiladas.html">Chicken Enchiladas Recipe</a>
