--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Enchiladas Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> Chicken Enchiladas Recipe</h1>
     <img src="../images/enchis.jpg" alt="a white oven dish full of cheesy enchiladas stacked in a row">
     <h2> Description</h2>
-    Chicken Enchiladas are a traditional mexican food that are enjoyed far and wide today. Stuffed with shredded chicken and cheese and topped with 
-    an easy red enchilada sauce this homemade classic is sure to be a family favorite.
-    <h3>Ingredients</h3>
-        <ul> 
+    <p class="para">Chicken Enchiladas are a traditional mexican food that are enjoyed far and wide today. Stuffed with shredded chicken and cheese and topped with 
+    an easy red enchilada sauce this homemade classic is sure to be a family favorite.</p>
+    <h3 class="ingr">Ingredients</h3>
+        <ul class="ulist"> 
             <li><strong>Tortillas-</strong> Store bought is fine however if you prefer to make your own there's many easy <a href="https://www.justataste.com/30-minute-homemade-flour-tortillas-recipe/" target="_blank" ref="noopener noreferrer">recipes</a> online.</li>
             <li><strong>Enchilada Sauce-</strong> It is highly recommended by enchilada connoisseur's to make your own <a href="https://www.isabeleats.com/easy-enchilada-sauce/" target="_blank" ref="noopener noreferrer">enchilada sauce</a>.</li>
             <li><strong>Shredded Chicken-</strong>You can use leftover shredded chicken if you have any. If not I would recommend a cooked rotisserie chicken from the grocery store if available. If not there's plenty of <a href="https://www.isabeleats.com/easy-shredded-chicken-recipe/" target="_blank" ref="noopener noreferrer">recipes</a> online.</li> 
-            <li><strong>Cheese-</strong>Pre-shredded cheese from the grocery store will work but if you're looking to upgrade our flavor try grating a block</li>
+            <li><strong>Cheese-</strong>Pre-shredded cheese from the grocery store will work but if you're looking to upgrade your flavor try grating a block</li>
         </ul>
-    <h3>Steps</h3>
-        <ol>
+    <h3 class="steps">Steps</h3>
+        <ol class="olist">
             <li>Preheat the oven to 350 degrees.</li>
             <li>Combine cooked shredded chicken and enchilada sauce into a large bowl and season with salt and pepper to taste.</li>
             <li>Warm the tortillas in the microwave for 1 minute, flipping them halfway through</li>
