--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
     <img src="../images/spaghetti.jpg" alt="plate of spaghetti">
     <h2>Description</h2>
-    Spaghetti is a timeless italian classic that can be made very simply and quickly. 
+    <p class="para">Spaghetti is a timeless italian classic that can be made very simply and quickly. 
     In this recipe we'll be using store bought noodles but if you wish to make your own, 
-    you can learn to do so easily <a href="https://www.loveandlemons.com/homemade-pasta-recipe/" target="_blank" rel="noopener noreferrer">here</a>
-    <h3>Ingredients</h3>>
-        <ul>
+    you can learn to do so easily <a href="https://www.loveandlemons.com/homemade-pasta-recipe/" target="_blank" rel="noopener noreferrer">here</a></p>
+    <h3 class="ingr">Ingredients</h3>>
+        <ul class=" ulist">
             <li><strong>Spaghetti-</strong>a box of your favorite brand will suite fine. I prefer whole wheat for extra nutritional value</li>
             <li><strong>Tomato Sauce-</strong>make sure it is tomato sauce as we're going to season it ourselves</li>
             <li><strong>Parmesan Cheese-</strong>the parmesan in a shake can will suffice but if you really want to excite your taste buds grab a fresh block of cheese and grate it yourself</li>
@@ -21,8 +23,8 @@
             <li><strong>Olive Oil-</strong>Use quality extra virgin for best flavor</li>
             <li><strong>Dried Oregano, Salt, and Pepper-</strong>a simple seasoning mix will suffice</li>
         </ul>
-    <h3>Steps</h3>
-        <ol>
+    <h3 class="steps">Steps</h3>
+        <ol class="olist">
             <li><strong>Cook Spaghetti:</strong>Fill a large pot with cold water and bring to a boil. 
                 Add 2 teaspoons of salt the spaghetti.make sure to stir occasionally to prevent noodles from sticking together.
                 Cook for 7 minutes until al dente.</li>
