--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Cheeseburger Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Cheeseburger Recipe</h1>
         <img src="../images/cheeseburger.jpg" alt="juicy cheeseburger loaded with toppings">
         <h2>Description</h2>
-            Cheeseburgers are a classic American staple and a perfect food to serve at any occasion! Not only are they versatile but they require little prep work and can be done start to finish in as little as 30 minutes.
-            Whether it's game day, a camping trip, or hosting your annual family reunion these Cheeseburgers are sure to be a hit!
-        <h3>Ingredients</h3>
-            <ul>
+            <p class="para">Cheeseburgers are a classic American staple and a perfect food to serve at any occasion! Not only are they versatile but they require little prep work and can be done start to finish in as little as 30 minutes.
+            Whether it's game day, a camping trip, or hosting your annual family reunion these Cheeseburgers are sure to be a hit!</p>
+        <h3 class="ingr">Ingredients</h3>
+            <ul class="ulist">
                 <li>ground beef-1lb</li>
                 <li>sliced cheese</li>
                 <li>hamburger buns</li>
@@ -22,8 +24,8 @@
                 <li>pepper</li>
                 <li>garlic</li>
             </ul>            
-        <h3>Steps</h3>
-            <ol>
+        <h3 class="steps">Steps</h3>
+            <ol class="olist">
                 <li>Get your grill hot</li>
                 <li>Season and mix ground beef with salt, pepper, and garlic</li>
                 <li>Using your hands, create 4 round patties from the ground beef</li>
